css/styles.css
/* ... */
.blogBackground1 {
  background-image: linear-gradient(rgba(88, 124, 131, 0.4), rgba(88, 124, 131, 0.4)), url(../images/book-club-hero.jpg);
  width: 1464px;
  height: 463px;
  margin: 0 auto;
  margin-top: 117px;
  margin-bottom: 123px;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  text-align: center;
}
.blogBackground1 .bloginfo-wrapper {
  padding-top: 170px;
  color: white;
}
.blogBackground1 .bloginfo-wrapper .blogInfoHeader {
  font-size: 32px;
}
.blogBackground1 .bloginfo-wrapper .blogInfoTxt {
  font-size: 22px;
}
.blogBackground1 .blogInfo {
  margin: 0 auto;
  padding-top: 150px;
  width: 900px;
  text-align: center;
  color: #fff;
}

.blog-section {
  width: 1464px;
  min-height: 463px;
  margin: 0 auto;
  margin-top: 117px;
  margin-bottom: 123px;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
}
.blog-section img {
  margin: 0 auto;
  text-align: center;
  height: 463px;
}
.blog-section .blog-text p {
  padding-left: 20px;
  text-align: left;
  font-size: 15px;
  font-family: Segoe UI;
  color: #000;
}

.blogBackgroundClr {
  background-color: #587c83;
  width: 1464px;
  height: 463px;
  margin: 0 auto;
  margin-top: 117px;
  margin-bottom: 123px;
  display: flex;
  align-items: center;
}
.blogBackgroundClr .blogImg {
  width: 250px;
  height: 380px;
  margin-left: 88px;
}
.blogBackgroundClr .blogHalfImg {
  width: 622px;
  height: 463px;
}
.blogBackgroundClr .blogInfo {
  width: 418px;
  margin-left: 197px;
  text-align: center;
  color: #fff;
}
.blogBackgroundClr .blogInfo .blogInfoHeader {
  font-size: 32px;
  margin-bottom: 60px;
}
.blogBackgroundClr .blogInfo .blogInfoTxt {
  margin-bottom: 60px;
}
.blogBackgroundClr .blogInfo .blogBtn {
  width: 222px;
  height: 68px;
  background-color: #587c83;
  border: 1px solid #fff;
  color: #fff;
  cursor: pointer;
}
.blogBackgroundClr .blogHalfInfo {
  width: 418px;
  margin-left: 250px;
  text-align: center;
  color: #fff;
}
.blogBackgroundClr .blogHalfInfo .blogInfoHeader {
  font-size: 32px;
  margin-bottom: 60px;
}
.blogBackgroundClr .blogHalfInfo .blogInfoEReadHeader {
  font-size: 32px;
  margin-bottom: 60px;
  width: 444px;
}
.blogBackgroundClr .blogHalfInfo .blogInfoTxt {
  margin-bottom: 60px;
}
.blogBackgroundClr .blogHalfInfo .blogBtn {
  width: 222px;
  height: 68px;
  background-color: #587c83;
  border: 1px solid #fff;
  color: #fff;
  cursor: pointer;
}
.blogBackgroundClr .blogHalfInfo .blogBtn a {
  color: white;
  text-decoration: none;
}

.blogBackground2 {
  background-image: linear-gradient(rgba(88, 124, 131, 0.4), rgba(88, 124, 131, 0.4)), url(../images/february-favorites-hero.jpg);
  width: 1464px;
  height: 463px;
  margin: 0 auto;
  margin-top: 117px;
  margin-bottom: 123px;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}
.blogBackground2 .blogInfo {
  margin: 0 auto;
  padding-top: 150px;
  width: 418px;
  text-align: center;
  color: #fff;
}
.blogBackground2 .blogInfo .blogInfoHeader {
  font-size: 32px;
  margin-bottom: 60px;
}
.blogBackground2 .blogInfo .blogInfoTxt {
  font-size: 22px;
  margin-bottom: 60px;
}
.blogBackground2 .blogInfo p {
  font-size: 12px;
}

.blog-section {
  width: 1464px;
  height: 463px;
  margin: 0 auto;
  margin-top: 117px;
  margin-bottom: 123px;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
  position: relative;
}
.blog-section img {
  margin: 0 auto;
  text-align: center;
  height: 463px;
}
.blog-section .blogInfoHeader {
  padding-left: 20px;
  text-transform: uppercase;
  text-align: left;
  font-size: 25px;
  font-weight: bold;
  font-family: Segoe UI;
  color: #000;
  position: absolute;
  top: 0;
}
.blog-section .blogInfoTxt {
  padding-left: 20px;
  text-align: left;
  font-size: 15px;
  font-family: Segoe UI;
  color: #000;
  padding-bottom: 200px;
}

.blogBackground3 {
  background-image: linear-gradient(rgba(88, 124, 131, 0.4), rgba(88, 124, 131, 0.4)), url(../images/book-club-hero.jpg);
  width: 1464px;
  height: 463px;
  margin: 0 auto;
  margin-top: 117px;
  margin-bottom: 123px;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
}
.blogBackground3 .blogInfo {
  margin: 0 auto;
  padding-top: 150px;
  width: 900px;
  text-align: center;
  color: #fff;
}
.blogBackground3 .blogInfo .blogInfoHeader {
  font-size: 32px;
  margin-bottom: 60px;
}
.blogBackground3 .blogInfo .blogInfoTxt {
  font-size: 22px;
  margin-bottom: 60px;
}

.blog-section {
  width: 1464px;
  min-height: 463px;
  margin: 0 auto;
  margin-top: 117px;
  margin-bottom: 123px;
  display: flex;
  align-items: center;
  justify-content: space-evenly;
}
.blog-section img {
  margin: 0 auto;
  text-align: center;
  height: 463px;
}
.blog-section .blog-text p {
  padding-left: 20px;
  text-align: left;
  font-size: 15px;
  font-family: Segoe UI;
  color: #000;
}

